testdata/cot/valid/control_flow.cot
// Control flow test fixture

fn abs(x: i64) i64 {
    if (x < 0) {
        return 0 - x
    }
    return x
}

fn is_positive(x: i64) i64 {
    if (x > 0) {
        return 1
    }
    return 0
}

fn is_zero(x: i64) i64 {
    if (x == 0) {
        return 1
    }
    return 0
}

fn main() {
    var a = abs(0 - 5)
    var p = is_positive(42)
    var z = is_zero(0)
}
