testdata/cot/invalid/type_errors/return_type_mismatch.cot
// Return type mismatch - should fail type checking

fn get_number() i64 {
    return "not a number"
}

fn main() {
    var x = get_number()
}
